--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,7 @@
 ---
 - name: install git latest version
-  hosts: centos
+  hosts: all
   become: true
   roles:
-    - { role: git.role}
+    - { role: git.role }
+
